minor alignment fixes on mob view

--- a/component/aboutUs/style.module.scss
+++ b/component/aboutUs/style.module.scss
@@ -15,6 +15,7 @@
       justify-content: space-between;
       flex-wrap: wrap;
       text-align: left;
+      gap: 1rem;
     }
   
     .text {
@@ -80,10 +81,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 1rem;
   
       img {
         max-width: 400px;
-        width: 100%;
+        width: 100%;    
       }
     }
   
