--- a/component/contact/style.module.scss
+++ b/component/contact/style.module.scss
@@ -1,39 +1,39 @@
 @import "../../public/styles/partials/variables";
 .contact {
-    background: $text-color;
-    color: $primary-color;
-    text-align: center;
-    padding: 5rem 2rem;
-  
-    .container {
+   background: $text-color;
+   color: $primary-color;
+   text-align: center;
+   padding: 5rem 2rem;
+
+   .container {
       max-width: 1200px;
       margin: auto;
-    }
-  
-    h2 {
+   }
+
+   h2 {
       font-size: 2.8rem;
       font-weight: bold;
       color: $secondray-hover;
       margin-bottom: 1rem;
       span {
-        // color: #ffcc00;
+         // color: #ffcc00;
       }
-    }
-  
-    p {
+   }
+
+   p {
       font-size: 1.2rem;
       color: $primary-color;
       margin-bottom: 2.5rem;
-    }
-  
-    .contactWrapper {
+   }
+
+   .contactWrapper {
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
       gap: 2rem;
-    }
-  
-    .contactInfo {
+   }
+
+   .contactInfo {
       flex: 1;
       text-align: left;
       background: #0d1f3c;
@@ -43,32 +43,32 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-  
+
       h3 {
-        font-size: 2.5rem;
-        color: $secondray-hover;
-        margin-bottom: 1rem;
+         font-size: 2.5rem;
+         color: $secondray-hover;
+         margin-bottom: 1rem;
       }
-  
+
       p {
-        font-size: 1.7rem;
-        color: #d1d1d1;
-        margin-bottom: 1rem;
-        line-height: 1.6;
+         font-size: 1.7rem;
+         color: #d1d1d1;
+         margin-bottom: 1rem;
+         line-height: 1.6;
       }
-  
+
       a {
-        color: $secondray-hover;
-        text-decoration: none;
-        font-weight: bold;
-  
-        &:hover {
-          text-decoration: underline;
-        }
+         color: $secondray-hover;
+         text-decoration: none;
+         font-weight: bold;
+
+         &:hover {
+            text-decoration: underline;
+         }
       }
-    }
-  
-    .contactForm {
+   }
+
+   .contactForm {
       flex: 1;
       background: #0d1f3c;
       padding: 2rem;
@@ -77,51 +77,62 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-  
-      input, textarea {
-        width: 100%;
-        padding: 1rem;
-        border-radius: 6px;
-        border: none;
-        font-size: 1rem;
-        background: #112b52;
-        color: #f0f0f0;
-        outline: none;
-  
-        &::placeholder {
-          color: #a0a0a0;
-        }
+
+      input,
+      textarea {
+         width: 100%;
+         padding: 1rem;
+         border-radius: 6px;
+         border: none;
+         font-size: 1rem;
+         background: #112b52;
+         color: #f0f0f0;
+         outline: none;
+
+         &::placeholder {
+            color: #a0a0a0;
+         }
       }
-  
+
       button {
-        padding: 1rem;
-        font-size: 1.2rem;
-        background: $hover-color;
-        color: #112b52;
-        border: none;
-        border-radius: 6px;
-        font-weight: bold;
-        cursor: pointer;
-        transition: background 0.3s ease;
-  
-        &:hover {
-          background:  $secondray-hover;
-        }
+         padding: 1rem;
+         font-size: 1.2rem;
+         background: $hover-color;
+         color: #112b52;
+         border: none;
+         border-radius: 6px;
+         font-weight: bold;
+         cursor: pointer;
+         transition: background 0.3s ease;
+
+         &:hover {
+            background: $secondray-hover;
+         }
       }
-    }
-    .successMessage {
-        color: #4caf50; // Green color for success
-        font-size: 16px;
-        font-weight: bold;
-        text-align: center;
-        margin-top: 10px;
-      }
-      
-  
-    @media (max-width: 768px) {
+   }
+   .successMessage {
+      color: #4caf50; // Green color for success
+      font-size: 16px;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 10px;
+   }
+
+   @media (max-width: 768px) {
       .contactWrapper {
-        flex-direction: column;
+         flex-direction: column;
       }
-    }
-  }
-  
+   }
+   @media (max-width: 768px) {
+      .contactInfo {
+         padding: 1rem;
+         
+         h3 {
+            font-size: 2rem;
+         }
+         p {
+            font-size: 1.3rem;
+         }
+      }
+   }
+}
